--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
 
     //this library lets you upload and display image in image resource
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
